docs-kits_versioned_docs/version-26.09/kits/product-carbon-footprint-exchange-kit/faq.md
---
id: faq
title: Catena-X PCF – Frequently Asked Questions
description: Questions and Answers
sidebar_position: 5
---

![PCF Exchange kit banner](@site/static/img/kits/pcf/pcf-kit-logo.svg)

Welcome to the Catena-X Product Carbon Footprint (PCF) Q&A. This section provides answers to frequently asked questions about accessibility, methodology, PCF data exchange, and business value within Catena-X.

:::tip
To quickly find a specific topic or question, you can use the search function in your browser or editor:

- **Windows:** Press `Ctrl + F`
- **Mac:** Press `Cmd + F`

Simply type keywords related to your question, and you will be taken directly to the relevant entry.
:::

## Accessibility

|  # | Question                                                                            | Answer                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|---:|-------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| 1 | Where can I find an overview of the entire Catena-X PCF Use Case and further information? | An overview of the Catena-X Product Carbon Footprint (PCF) use case, including relevant standards, specifications, guidance documents, and further information, can be found on the official [Catena-X PCF landing page](https://catena-x.net/use-case-cluster/product-carbon-footprint/).                                                                                                                                                                                                                    |
|  2 | Where do I find the Catena-X PCF Rulebook?                                          | The PCF Rulebook (Product Carbon Footprint Rulebook) and the PCF Verification Framework can be found in the official Catena-X Standard Library. See the overview of the non-functional CX-Standards here: [Non-Functional Standards Overview](https://catenax-ev.github.io/docs/non-functional/overview). You may change the release via the dropdown to browse through the versions.                                                       |
|  3 | Where do I find the Catena-X PCF Verification Framework?                            | See the PCF Verification Framework document here: [PCF Verification Framework PDF](https://catenax-ev.github.io/assets/files/CX-NFR-PCF_TFS-verification_v.2.0-fc44ea870e8b9756246f345c343f88dd.pdf).                                                                                                                                                                                                                                       |
|  4 | Where do I find the PCF Exchange Standard CX-0136?                                  | You can find the PCF Exchange Standard CX-0136 here: [CX-0136 Standard](https://catenax-ev.github.io/docs/standards/CX-0136-UseCasePCF).                                                                                                                                                                                                                                                                                                    |
|  5 | Where do I find PCF guidance documents?                                             | Additional PCF guidance documents can be found on the PCF Landing Page under [Further Guidance Documents](https://catena-x.net/further-guidance-documents-for-pcf/). Direct link to the PCF Calculation Guidance: [PCF Calculation Guidance PDF](https://catena-x.net/wp-content/uploads/2026/08/2026-01-27_PCF-Calculation_V10.pdf). |
|  6 | Where do I find the Catena-X PCF Data Model?                                        | The PCF Data Model is stored in the Tractus-X semantic model library: [PCF Data Model on GitHub](https://github.com/eclipse-tractusx/sldt-semantic-models/tree/main/io.catenax.pcf).                                                                                                                                                                                                                                                        |
|  7 | Can I use a PCF calculated according to other industry PCF guidelines for Catena-X? | Yes – PCFs based on other industry guidelines can be used if they meet the Catena-X PCF Rulebook requirements and are mapped to the Catena-X PCF Exchange Data Model: [PCF Data Model on GitHub](https://github.com/eclipse-tractusx/sldt-semantic-models/tree/main/io.catenax.pcf).                                                                                                                                                        |
|  8 | Which PCF-related Catena-X Expert Groups do exist?                                  | Please refer to the overview on the Catena-X website: [Expert Groups & Committees at Catena-X](https://catena-x.net/association/expert-groups-committees/).                                                                                                                                                                                                                                                                                 |
|  9 | How can I become active in one of the PCF-related Expert Groups?                    | To become active in a PCF-related Expert Group, Catena-X Association member organizations must apply during the application phase or after the group is initiated and validated via [sustainability@catena-x.net](mailto:sustainability@catena-x.net). Only one person per company can participate per group.                                                                                                                               |
| 10 | Which PCF Rulebook version does IMDS use in the Release published in July 2025?     | IMDS references version 3.0 of the PCF Rulebook; attributes are based on Catena-X Data Exchange Format 7.0.0. Updates are planned.                                                                                                                                                                                                                                                                                                          |
| 11 | How do I become a certified Catena-X PCF Attestation Provider?                      | To become a certified Catena-X PCF Attestation Provider, you must meet the Catena-X requirements and complete the certification process. Detailed information and the application process can be found here: [Catena-X PCF Attestation Provider](https://catena-x.academy/catena-x-pcf-attestation-provider/).                                                                                                                              |
| 12 | Where do I find currently certified Catena-X PCF Attestation Providers?             | You can find the list of currently certified Catena-X PCF Attestation Providers on the Catena-X Academy website: [Certified PCF Attestation Providers](https://catena-x.academy/catena-x-qualified-attestation-provider/).                                                                                                                                                                                                                  |

## PCF Exchange

| # | Question                                                                                   | Answer                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|--:|--------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| 1 | Can I still use my own secondary data or do I have to use the Catena-X secondary database? | You can still use your own secondary data. The Catena-X secondary database becomes an option, not a requirement.                                                                                                                                                                                                                                                                                                                                                                                  |
| 2 | What data model or submodel is used for PCF in Catena-X?                                   | The PCF aspect model is written in SAMM 2.1.0. Additional details here: [List of standalone standards](https://catenax-ev.github.io/docs/next/standards/CX-0136-UseCasePCF#211-list-of-standalone-standards).                                                                                                                                                                                                                                                                                     |
| 3 | What is the PCF data format — JSON-LD, AAS submodel, or something else?                    | The PCF exchange API MUST use JSON as the payload.                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| 4 | How is PCF data exchanged in Catena-X?                                                     | PCF data is exchanged in Catena-X via the Eclipse Dataspace Connector (EDC). Companies can choose between (1) [ready-to-use PCF apps](https://www.cofinity-x.com/apps?search=pcf) with a fully hosted connector, (2) [managed EDC services](https://www.cofinity-x.com/services?search=EDC) operated by a service provider, or (3) self-managed EDC deployments based on Tractus-X components.                                                                                                    |
| 5 | How is my PCF data kept secure and who can see it?                                         | Access follows data sovereignty principles; only partners with a valid Supplier–Customer relationship and BPN can request PCF datasets.                                                                                                                                                                                                                                                                                                                                                           |
| 6 | Which tools or apps can I use to create PCF data for Catena-X?                             | Any solution following the Rulebook methodology can be used. There are several certified PCF Calculation and Exchange solutions on the Cofinity-X marketplace: [Certified PCF APPs](https://www.cofinity-x.com/apps?case=product-carbon-footprint-pcf&page=1).                                                                                                                                                                                                                                    |
| 7 | How do I onboard my company to start sharing PCF in Catena-X?                              | To onboard your company for sharing PCF in Catena-X, you need a Business Partner Number (BPN), a working connector (hosted or self-managed), and registration in the Catena-X portal. You can work with [qualified Catena-X service providers](https://catena-x.academy/catena-x-qualified-advisor/) who support BPN acquisition, connector setup, and onboarding. A direct entry point for onboarding is available here: [Cofinity-X Onboarding](https://www.cofinity-x.com/onboarding#contact). |
| 8 | Can I use my own software to calculate PCFs and exchange the data via a Catena-X EDC?      | Yes. Companies can use their own software to calculate and manage PCF data and integrate it with a Catena-X-compliant EDC, for example via an enablement service provider. The data can then be exchanged with Catena-X partners. However, technical exchange does not automatically mean that the PCF complies with the Catena-X PCF Rulebook. If required, PCFs can be verified by third parties according to the applicable verification framework.                                        |
| 9 | Which technical environments does Catena-X provide for PCF data exchange?                  | Catena-X offers two environments: PROD – for productive data exchange, and PREPROD – for testing and Proof of Concepts (PoCs). Important: Data exchange only works if both the data provider and the data consumer operate within the same environment. A BPN (Business Partner Number) can only be used in one environment at a time – it cannot be active on PROD and PREPROD simultaneously.                                                                                                 |
| 10 | Does Catena-X support both synchronous and asynchronous data transfer for PCF exchange?   | Yes. Since the Saturn release, Catena-X supports synchronous data transfer in addition to the established asynchronous request/response process for PCF data exchange: [PCF Exchange Kit – Adoption View](https://eclipse-tractusx.github.io/docs-kits/kits/product-carbon-footprint-exchange-kit/adoption-view/).                                                                                                                                                                                |
| 11 | What does the new optional synchronous API mean for PCF exchange?                         | Previously, PCF exchange was exclusively asynchronous (request/response). With Neptune, an optional synchronous API via the Industry Core standard is introduced. This means: the asynchronous exchange remains the primary mode, but implementations may now also retrieve PCF data synchronously. The synchronous API is not mandatory. |
| 12 | What happens to an older Catena-X release when a new release is introduced?              | When a new Catena-X release becomes active, older releases may be deprecated and eventually no longer considered conformant. Companies should therefore ensure that their implementations support the currently applicable release. For example, with the planned CX-Neptune go-live at the end of November 2026, CX-Jupiter will be deprecated. Systems supporting only Jupiter will then no longer be considered conformant. Always refer to the applicable release documentation for current transition dates and requirements. |
| 13 | Which PCF data model versions do I need to support during a Catena-X release transition? | During a Catena-X release transition, applications may need to support multiple PCF data model versions to ensure backward compatibility (see also [Release Management](https://catenax-ev.github.io/release-management)). For example, during the transition from CX-Jupiter to CX-Saturn, both V7.0.0 and V9.0.0 need to be supported (V8.0.0 was skipped). With Neptune, V10.0.0 will be introduced and will be backward compatible with V9.0.0, while V7.0.0 will be deprecated. Always check the applicable release documentation in the [CX-0136 Standard](https://catenax-ev.github.io/docs/standards/CX-0136-UseCasePCF) for the current version requirements. |
| 14 | If the V7.0.0 data model is deprecated, how can I continue using existing data sets? | Existing PCF datasets based on the V7.0.0 data model do not need to be recalculated from scratch. To continue using them within the Catena-X network after V7.0.0 is deprecated, they need to be migrated/transformed to the applicable data model, currently V9.0.0. The migration includes mapping existing V7 fields to the V9 structure, populating newly required V9 fields, updating the `specVersion`, generating a new PCF ID and referencing the previous PCF ID via `precedingPfIds`. The migrated dataset must then be validated against the V9 schema before it is shared again. During the transition period, applications should support datasets of the current and maintained releases. For detailed migration instructions, see the [PCF Data Model: Migration V7–V9 Guidance](https://catena-x.net/wp-content/uploads/2026/09/PCF-Data-Migration-Guidance_Final.pdf). |
| 15 | Do I need to have my PCF data externally verified before sharing it via the Catena-X data space? | No, formal external verification is not a prerequisite for data exchange. The [PCF Verification Framework](https://catenax-ev.github.io/assets/files/CX-NFR-PCF_TFS-verification_v.2.0-fc44ea870e8b9756246f345c343f88dd.pdf) distinguishes several trust levels: Trust Level 1 – automated completeness and conformity check of the dataset (no formal verification required); higher trust levels – optional formal verification or program certification by third parties. The new data model includes optional attributes such as PCF Certification Share and PCF Verification Share to transparently indicate the level of trust. |

## Methodology

| # | Question                                                                                                            | Answer                                                                                                                                                                    |
|--:|-----------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| 1 | Many semiconductor companies use their own PCF methods. Are there plans to bring them to the Catena-X PCF Rulebook? | Yes, there are ongoing discussions with Semiconductor X and others to harmonize and compare methodologies.                                                                |
| 2 | What exactly is PCF in Catena-X and how is it defined?                                                              | PCF is the total GHG emissions during the life cycle of a product (CO2eq). Use- and end-of-life phases are excluded in Catena-X.                                          |
| 3 | Is Catena-X PCF aligned with GHG Protocol, ISO 14067, or PACT?                                                      | Yes — Catena-X PCF builds on ISO 14067 and ISO 14040/44 and is aligned with PACT. The PCF Exchange Data Model is interoperable with the PACT PCF Datamodel.               |
| 4 | How does Catena-X calculate PCF — do I calculate it or does the platform?                                           | Companies calculate PCFs themselves using LCA tools according to the PCF Rulebook and then share the results via connectors/apps in the decentralized Catena-X dataspace. |
| 5 | What's the difference between primary data and secondary data in PCF reporting?                                     | Primary data = company-specific measurements; secondary data = databases (e.g., ecoinvent). See glossary in the PCF Rulebook.                                             |
| 6 | Do I need to include cradle-to-grave or just cradle-to-gate values?                                                 | Catena-X requires cradle-to-gate.                                                                                                                                         |
| 7 | How are allocation rules handled in Catena-X PCF calculations?                                                      | Allocation rules follow a decision tree (chapter 5.1.2). For recycled materials, Catena-X uses the cut-off approach (chapter 5.1.5.1, Rulebook v4).                       |
| 8 | Do the minimum criteria for contractual instruments in Section 5.2.4.2 of the PCF Rulebook apply only to Power Purchase Agreements (PPAs)? | Not only to Power Purchase Agreements (PPAs). The minimum criteria apply for all contractual instruments (e.g. Energy Attribute Certificates, s. 5.2.6.2.1). The criteria are used to check the validity and eligibility of contractual instruments. For further details, please refer to the [latest PCF Rulebook](https://catenax-ev.github.io/docs/non-functional/overview), which also includes an additional Section on contractual instruments. |
| 9 | How is the term "regional market" defined for electricity tracking instruments in the Catena-X PCF Rulebook? | As stated an "Interconnection can be proven" and same tracking system. In this sense it complies with the RE100 definition. |

## Business Value

| # | Question                                                                   | Answer                                                                                                                          |
|--:|-----------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------|
| 1 | How does PCF in Catena-X help with CSRD compliance?                        | Catena-X enables collecting standardized PCF data usable for Scope 3 accounting.                                                |
| 2 | How does PCF in Catena-X support EU Battery Regulation compliance?         | Catena-X supports exchange of PCF data required for the Battery Passport. More detail follows after the delegated act is final. |
| 3 | Is the PCF used in the Battery Passport within Catena-X?                   | Yes — PCF data is a mandatory attribute for any Battery Passport.                                                               |
| 4 | How does PCF reporting help with OEM tenders or supply chain requirements? | OEMs increasingly request PCF data for tenders. From version 4 Rulebook includes rules for prospective PCFs used in tenders.    |
| 5 | What kind of support is available for interested and newly registered companies to ease their first steps with PCF data exchange? | Qualified and certified Catena-X solution and service providers can support companies with technical enablement, connector setup, onboarding, and ready-to-use PCF exchange Apps. There are occasional financial support activities (e.g. [Data Space Accelerator](https://catena-x.net/news/e23-million-data-space-accelerator-launched-to-fast-track-sme-integration-within-the-catena-x-ecosystem/) till 30th October 2026) to support companies in getting started with Catena-X. Check the [Catena-X news area](https://catena-x.net/news/) for latest activities. |

## Notice

This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode)

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2025 Contributors to the Eclipse Foundation
